change background and text color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     </head>
     <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: Arial, sans-serif; background: #000;
+	color: #fff;
     }
     #gameDiv {
         position: absolute;
