--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <style>
     body {
-        font-family: Arial, sans-serif; background: #000;
-	color: #fff;
+        font-family: Arial, sans-serif; background: #777;
+	color: #ccc;
     }
     #gameDiv {
         position: absolute;
